extensions/wikia/ScavengerHunt/css/scavenger-game.scss
@import "../../../../skins/oasis/css/core/color";

.scavenger-clue-image {
	position: absolute;
}

.scavenger-hidden-image {
	cursor: pointer;
	position: absolute;
	z-index: 1100;
}

.scavenger-start-button {
	float: right;
	input {
		font-size: 18px;
		height: auto;
		padding: 10px;
	}
}

.scavenger-share-button {
	text-align: right;
}

.scavenger-clue-text {
	font-size: 16px;
	line-height: 22px;
	span {
		color: $color-links;
		display: inline-block;
		margin-bottom: 16px;
	}
}

.scavenger-clue-button {
	padding-top: 20px;
	text-align: right;
	a.button, input.wikia-button {
		font-size: 18px;
		height: auto;
		padding: 10px;
	}
}

#scavengerClueModal, #scavengerGoodbyeModal {
	h1, .modalContent {
		border: none;
		margin-bottom: 0;
		margin-left: 100px;
		padding: 10px;
	}
}

#scavengerEntryFormModal {
	h1, .modalContent {
		border: none;
		padding: 10px;
	}

	.scavenger-clue-question, label {
		font-size: 16px;
		margin-bottom: 4px;
	}

	.scavenger-entry-form {
		&>textarea, &>input, &>label {
			display: block;
		}
		&>textarea, &>input {
			width: 99%;
			margin-bottom: 12px;
			border: 1px solid $color-page-border;
			&:focus {
				border-color: $color-links;
			}
		}
	}
}

